--- a/src/Components/AlpacaButton.css
+++ b/src/Components/AlpacaButton.css
@@ -39,11 +39,15 @@ img {
     margin: 10px;
     max-height:  50vh;
     max-width:  50vw;
+    border: 10px solid;
+    box-shadow: 50px;
 }
+
 .AlpacaButton {
     display: inline-block;
     align-items: center;
 }
+
 .images {
     padding: 50px;
 }
